--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -284,7 +284,7 @@
 %------------------------------------------------------------------------------
 % You could instead add your acknowledgements here - don't forget to
 % also add them to \includeonly above
-%\include{thesis_acknowledge}%nalipour acknowledge
+\include{thesis_acknowledge}%nalipour acknowledge
 
 %------------------------------------------------------------------------------
 % CV needed when you submit your PhD thesis
