--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -3,53 +3,60 @@
 \label{sec:ack}
 %------------------------------------------------------------------------------
 
-The achievement of this thesis is thanks to the help and contribution
-of many people involved and I do my best to credit every single one of
-them.
+The realisation of the present work has been made possible through
+valuable assistance, counsels and contributions of experts and
+collaborators to whom I feel myself obliged to pay my sincere
+gratitudes.
 
-First of all, I am obliged to pay my tribute to my professor, Günther
-Dissertori, for according me the great opportunity as a PhD student in
-physics at the ETH Zürich even though I came from an engineering
-background. The discussions, the support and guidance at any time
-despite his very busy schedule is very appreciated.
+First of all, I would like to pay my most heartfelt tributes to my ,
+Günther Dissertori, for providing me with the opportunity to pursue my
+PhD studies in physics at the ETH Zürich. I will never forget the
+unrelenting and precious support, guidance and comments.
 
-I acknowledge with thanks Dominik Dannheim, as my supervisor at CERN,
-for following my work during three years with high-precision and a lot
-of patience and showing me your excellence in guiding of the research
-project on the vertex detector R\&D.
 
-All my gratitude also goes to Lucie Linssen, as the group leader of
-the EP-LCD group, who gave me various opportunities to work at her
-dynamic and creative group at CERN and for convincing all the
-above-mentioned supervisors to accept me as a PhD student.
+My acknowledgement and appreciations go to Dominik Dannheim, as well,
+who in capacity as my supervisor at CERN, oversaw my work during three
+years of close collaboration, through exertion of notable care and
+skill in monitoring the Research Project on the Vertex Detector R\&D.
 
-I would like to thank the EP-LCD group in general for their
-contribution to my work and also all the lunches, coffee breaks and
-social activities shared. More particularly, I express my gratitude
-to:
+I have to offer my unqualified and heartfelt gratitude to Lucie
+Linssen, as the group leader of the EP-LCD group, who never hesitated
+to provide me with excellent and invaluable opportunities to work in
+her dynamic and creative group at CERN and for her encouragements to
+pursue and fulfill my PhD studies.
+
+I owe a lot to the EP-LCD group in general for their contribution to
+my work and also all the memorable time we have shared during
+gatherings lunches, coffee breaks and social events. More
+particularly, I express my gratitude to:
 
 \begin{itemize}
-\item Andreas Nurnberg, who always was present for guiding me,
-  answering my questions, discussing my results and all his help
-  without which the carrying of this project would have not been
-  possible.
+\item Andreas Nurnberg, who always was present for providing his
+  counsel and advice and all his help and patience for reading
+  meticulously my thesis and giving me instructive comments and
+  drawing conclusions.
+
+\item The Medipix collaboration, especially Messrs. Michael Campbell,
+  Xavi Llopart Cudie and Jérôme Alozy for guidance and advice about
+  the Timepix chips.
+
 \item Daniel Hynds and Adrian Fiergolski for the various discussions
   and test-beams we have shared.
-\item Mathieu Benoît for introducing me to the pixel world through
+
+\item Mathieu Benoît for leading me to the pixel world through
   test-beams, TCAD simulations and AllPix simulations.
-\item Rosa Simoniello, for sharing the office and all the discussions,
-  work-related or personal and the laughs we have shared.
+
+\item Rosa Simoniello, for sharing the office and all the discussions
+  and laughs we have shared.
 \end{itemize}
 
-I would like to thank my friends with whom I have shared so many
-memorable moments and I could count on them for any kind of support
-even though lately I was not really present due to the work load. My
-friends from Lausanne that I met during my studies at EPFL and we
-shared many years on the university benches and now we share so many
-great dinners, brunches: Charlotte, Chloé, Christophe, Coralie, Lara,
-Mina, Salim and Sebastien. And to my friends I have met at CERN:
-Elena, Enrico, Luca, Milena, Myriam for the shared lunches,
-discussions or nights out.
+I would like to thank my friends with whom I have shared great
+memorable moments and I could count on them for any kind of
+support. My friends from Lausanne whom I met during my studies at EPFL
+and we shared many years on the university benches and now we share so
+many great events: Charlotte, Chloé, Christophe, Coralie, Lara, Mina,
+Salim and Sebastien. And to my friends I have met at CERN: Elena,
+Enrico, Luca, Milena and Myriam.
 
 Finally, I would like to thank my amazing family: my parents,
 Mahmanzar and Behzad, for their unconditional love and support
@@ -57,8 +64,8 @@ throughout all my life, for all their sacrifices without which I could
 not imagine where I would be now. My beloved sister and housemate,
 Yassaman, for always being present, encouraging me and tolerating me
 during the times I was low (basically the whole year of 2016). My
-little smart brother, Alireza, for being who he is and always making
-me laugh with his funny stories.
+beloved sister and brother, Yassaman and Alireza, for always being
+present by my side and encouraging me.
 
 % I would like to thank ...
 
