--- a/resume.tex
+++ b/resume.tex
@@ -14,8 +14,8 @@ des mesures plus précises sur le boson de Higgs.
 Afin d'atteindre les objectifs de découvertes pour CLIC, un détecteur
 de vertex fait de détecteurs à pixel de haute précision est en cours
 de développement. Une haute résolution spatiale de $3\,\micron$, une
-légère masse de 0.2\%~X\textsubscript{0} par couche de détection, une
-capacité de timestamp de 10~ns, une basse dissipation de puissance de
+légère masse de 0.2\%~X\textsubscript{0} par couche de détection, un
+marquage en temps de 10~ns, une basse dissipation de puissance de
 l’ordre de 50 mW/cm\textsuperscript{2} et compatible avec un
 refroidissement à air sont parmi les exigences requises par le
 détecteur de vertex pour CLIC. Dans cette étude, nous nous concentrons
