[ThinSensors] Citation for enhanced charge sharing

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -730,9 +730,9 @@ $\sim6.4\,\micron$ (the tracking resolution of $\sim2\,\micron$ is not
 unfolded) is still significantly worse than the required
 $3\,\micron$. It can be concluded that the required resolution can not
 be achieved with planar sensors of $50\,\micron$ thick and
-$25\,\micron$ pitch. New sensor concepts with enhanced charge sharing
-or integrated technologies with even smaller pixel
-pitch~\cite{Arai:2011ara} are therefore required.
+$25\,\micron$ pitch. New sensor concepts with enhanced charge
+sharing~\cite{Jansen2016242} or integrated technologies with even
+smaller pixel pitch~\cite{Arai:2011ara} are therefore required.
 
 
 % the $25\,\micron$ pitch. Smaller pixels can show
