--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -741,3 +741,21 @@ abstract = "The ROOT system in an Object Oriented framework for large scale data
       reportNumber   = "CLICdp-Conf-2015-002",
       SLACcitation   = "%%CITATION = JINST,10,C07001;%%"
 }
+
+@article{Jansen2016242,
+title = "A Pascalian lateral drift sensor ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "831",
+number = "",
+pages = "242 - 245",
+year = "2016",
+note = "Proceedings of the 10th International “Hiroshima” Symposium on the Development and Application of Semiconductor Tracking Detectors ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2016.01.092",
+url = "http://www.sciencedirect.com/science/article/pii/S016890021600142X",
+author = "H. Jansen",
+keywords = "Semiconductor detector",
+keywords = "Deep bulk engineering",
+keywords = "Sensor concept",
+keywords = "Precision particle tracking "
+}
