--- a/presentation/presentations.tex
+++ b/presentation/presentations.tex
@@ -25,7 +25,22 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
+
+\usepackage{graphicx} % Allows including images
+\usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
+\usepackage{xcolor, color}% ,colortbl}
+\usepackage{tikz} % nalipour
+\usetikzlibrary{tikzmark} % nalipour
+
 \usepackage{helvet}
+\usepackage{../CLICdp_definitions} % nalipour
+\usepackage{xspace}
+\usepackage{upgreek} % nalipour
+\usepackage{amsmath, mathtools} % nalipour
+\renewcommand{\thefootnote}{\fnsymbol{footnote}} % nalipour: symbols
+                                % for the footnote
+\usepackage{verbatim} % nalipour
+\usepackage{fixltx2e}
 
 %-------------------------------------------------------
 % DEFFINING AND REDEFINING COMMANDS
