Hadron vs. lepton colliders. Text to complete

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -6,13 +6,37 @@
 %-------------------------------------------------------
 %-------------------------------------------------------
 \section{Introduction}
+%-------------------------------------------------------
+%-------------------------------------------------------
+
 \begin{frame}
-  \frametitle{Introduction}
+  \frametitle{Hadron vs. Lepton colliders}
+  
+  \begin{block}{}
+    \centering
+    Discovery to Precision
+  \end{block}
+
+  \begin{columns}
+    \column{0.5\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/hadronColliders.pdf}
+
+    \begin{itemize}
+    \item Protons are 
+    \end{itemize}
+
+    \column{0.5\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/leptonColliders.pdf}
+
+  \end{columns}
 
 \end{frame}
 
 %-------------------------------------------------------
 \subsection{CLIC}
+%-------------------------------------------------------
 \begin{frame}
   \frametitle{The Compact LInear Collider (CLIC)}
 
