[abstract] implemented Gunther's comments

--- a/abstract.tex
+++ b/abstract.tex
@@ -2,9 +2,9 @@
 \chapter*{Abstract}
 % ============================================================================
 
-The multi-\tev e$^+$e$^-$ Compact Linear Collider (CLIC), is one of
-the options for a future high-energy collider for the post-LHC era. It
-would allow for searches of new physics and simultaneously offers the
+The multi-\tev e$^+$e$^-$ Compact Linear Collider (CLIC) is one of the
+options for a future high-energy collider for the post-LHC era. It
+would allow for searches of new physics and simultaneously offer the
 possibility for precision measurements of standard model
 processes. The physics goals and experimental conditions at CLIC set
 high precision requirements on the vertex detector made of pixel
