[Introduction] implemented Gunther's comment

--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -54,7 +54,7 @@ Active-edge sensors allow for seamless tiling of pixel sensors by
 depleting the sensors up to their physical edges. In a vertex
 detector, this allows for high coverage without creating overlaps
 between the pixel sensors and therefore reduces the material
-content. Efficiency measuremnets in test-beams on prototypes and
+content. Efficiency measurements in test-beams on prototypes and
 corresponding finite-element TCAD simulations are performed to compare
 the performance of different active-edge sensor layouts, resulting in
 a proposal for a suitable layout.
