--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -11,14 +11,14 @@ determination of its mass in 2012. However, the experiments at the LHC
 can not fully answer the questions on the nature of this particle. A
 lepton collider can provide complementary precision measurements.
 
-However, the energy loss due to the synchrotron radiation in a
-circular accelerator limits the center-of-mass energy $\sqrt{s}$
-reached with electron beams. The synchrotron power loss is inversely
-proportional to the square of the bending radius of the accelerator
-and the forth power of the particle mass. The proposed Compact Linear
-Collider (CLIC)~\cite{Aicheler:1500095,Linssen:1425915}, as a future
-linear particle collider for electrons (e$^-$) and positrons (e$^+$),
-can avoid synchrotron radiation losses and therefore attain higher
+The energy loss due to the synchrotron radiation in a circular
+accelerator limits the center-of-mass energy $\sqrt{s}$ reached with
+electron beams. The synchrotron power loss is inversely proportional
+to the square of the bending radius of the accelerator and the forth
+power of the particle mass. The proposed Compact Linear Collider
+(CLIC)~\cite{Aicheler:1500095,Linssen:1425915}, as a future linear
+particle collider for electrons (e$^-$) and positrons (e$^+$), can
+avoid synchrotron radiation losses and therefore attain higher
 center-of-mass energies than the Large Electron-Positron Collider
 (LEP). In the post-LHC era, CLIC will allow to determine the
 properties of the Higgs boson with a very high precision. CLIC can
