[Silicon] Implemented Gunther's comments

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -759,3 +759,13 @@ keywords = "Deep bulk engineering",
 keywords = "Sensor concept",
 keywords = "Precision particle tracking "
 }
+
+@article{Gadomski:2001jqa,
+      author         = "Gadomski, S.",
+      title          = "{Model of the SCT detectors and electronics for the ATLAS
+                        simulation using Geant4}",
+      year           = "2001",
+reportNumber  = "ATL-SOFT-2001-005",
+url           = "http://cds.cern.ch/record/684197",
+      SLACcitation   = "%%CITATION = ATL-SOFT-2001-005;%%"
+}
